[breaking change] remove deprecated job builder code
- this breaks configs created by versions below 0.9.0 which have never been resaved
- replace other deprecated code